# src/db/models/balance.js
@@ -1,0 +1,13 @@
+import mongoose from 'mongoose';
+
+const balanceSchema = new mongoose.Schema({
+  amount: {
+    type: Number,
+    required: true,
+    default: 0,
+  },
+});
+
+const Balance = mongoose.model('Balance', balanceSchema);
+
+export default Balance;
